--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
             <div class="col-lg-5 col-md-12 wow zoomIn" data-wow-delay=".6s"> <img
 
-                class="banner-img" src="images/banner-thumb.png" alt=""> </div>
+                class="banner-img" src="images/accellogo.png" alt=""> </div>
           </div>
         </div>
       </div>
