--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                   data-wow-delay=".5s" target="_top">Register for private sale</a>
               </div>
-              <div> <a href="https://www.youtube.com/watch?v=uau6_T7d3Os" class="text-light popup-youtube wow fadeInUp"
+              <div> <a href="https://www.youtube.com/watch?v=_ewDJ0m7hBM" class="text-light popup-youtube wow fadeInUp"
 
                   data-wow-delay=".6s"> Watch Video <i class="fa fa-play-circle pl-2"></i></a>
               </div>
