--- a/index.html
+++ b/index.html
@@ -316,11 +316,7 @@
             <div class="col-lg-7 col-md-12 col-gap">
               <h2 class="mb-md-5 wow fadeInUp" data-wow-delay=".2s">ACCEL
                 FINANCE Token</h2>
-              <p class="wow fadeInUp" data-wow-delay=".3s">Lorem ipsum dolor sit
-                amet, consectetur adipisicing elit. A aperiam blanditiis
-                commodi, consequatur delectus eveniet illo itaque magni,
-                obcaecati quae quod recusandae ullam, velit. Accusamus commodi
-                consequuntur molestiae porro sit.</p>
+              <p class="wow fadeInUp" data-wow-delay=".3s">Accel Finance is a cutting-edge financial technology company that has recently created their own token, $ACCEL, on the blockchain MultiversX. The company is committed to providing innovative financial solutions to users around the world. $ACCEL is a utility token that can be used to access a variety of financial services on the Accel Finance platform.</p>
               <div class="row">
                 <div class="col-md-6 wow fadeInUp" data-wow-delay=".25s">
                   <h5 class="text-purple-color">Social Trading</h5>
