--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <nav class="navbar navbar-expand-md" id="mainNav">
-             <a class="navbar-brand mr-5" href="#">
-   <img class="logo-img" src="images/accellogo.png" alt="Accel Finance Logo"
-   style="top: 13px; left: 199px; width: 78px; height: 78px;">
-</a>
+            <nav class="navbar navbar-expand-md" id="mainNav"> <a class="navbar-brand mr-5"
+
+                href="#"> <img class="logo-img" src="images/accellogo.png" alt="Accel Finance Logo"
+
+                  style="top: 13px; left: 199px; width: 78px; height: 78px;"> </a>
               <!--logo-->
               <!--responsive toggle icon--> <button class="navbar-toggler" type="button"
 
@@ -53,8 +53,9 @@
                   </li>
                   <li class="nav-item"> <a class="nav-link js-scroll-trigger" href="#roadmap">Roadmap</a>
                   </li>
-                  <li class="nav-item"> <a class="nav-link js-scroll-trigger" href="#ico">Why
-                      ICO</a> </li>
+                  <li class="nav-item"> <a class="nav-link js-scroll-trigger" href="https://2903325516-files.gitbook.io/%7E/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FVg2TsThIxH6XBZ1pC8qR%2Fuploads%2FT7f29yc5FlxBd7zCRbEB%2FAccel%20Whitepaper.pdf?alt=media&amp;token=f7ffe046-fcd5-43ea-ae53-2086c8666bdd"
+
+                      target="_top">Whitepaper</a> </li>
                   <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle"
 
                       href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -316,26 +317,29 @@
             <div class="col-lg-7 col-md-12 col-gap">
               <h2 class="mb-md-5 wow fadeInUp" data-wow-delay=".2s">ACCEL
                 FINANCE Token</h2>
-              <p class="wow fadeInUp" data-wow-delay=".3s">Accel Finance is a cutting-edge financial technology company that has recently created their own token, $ACCEL, on the blockchain MultiversX. The company is committed to providing innovative financial solutions to users around the world. $ACCEL is a utility token that can be used to access a variety of financial services on the Accel Finance platform.</p>
+              <p class="wow fadeInUp" data-wow-delay=".3s"><span style="color: rgb(255, 255, 255); font-family: &quot;Roboto Slab&quot;, serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 300; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(50, 57, 69); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">Accel
+                  Finance is a cutting-edge financial technology company that
+                  has recently created their own token, $ACCEL, on the
+                  blockchain MultiversX. The company is committed to providing
+                  innovative financial solutions to users around the world.
+                  $ACCEL is a utility token that can be used to access a variety
+                  of financial services on the Accel Finance platform.</span></p>
               <div class="row">
                 <div class="col-md-6 wow fadeInUp" data-wow-delay=".25s">
-                  <h5 class="text-purple-color">Social Trading</h5>
-                  <p class="mb-3">Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit accusamus animi.</p>
+                  <h5 class="text-purple-color">Staking</h5>
                   <ul class="list-unstyled">
-                    <li>- Earn BPT rewards</li>
-                    <li>- Learn from others</li>
-                    <li>- Become an influencer</li>
+                    <li>Earn Staking rewards for holding Accel token</li>
                   </ul>
                 </div>
                 <div class="col-md-6 wow fadeInUp" data-wow-delay=".4s">
-                  <h5 class="text-paste-color">Discounted Trading fees</h5>
-                  <p class="mb-3">Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit accusamus animi.</p>
+                  <h5 class="text-paste-color">Goverence NFTs</h5>
                   <ul class="list-unstyled">
-                    <li>- Lower transaction costs</li>
-                    <li>- Separate your fees from trading</li>
-                    <li>- Switch on or off</li>
+                    <li>Purchase an NFT and participate in ACCEL&nbsp; Rulling
+                      and Decision<span style="color: #d1d5db;"><span style="font-family: Söhne,ui-sans-serif,system-ui,-apple-system,&quot;Segoe UI&quot;,Roboto,Ubuntu,Cantarell,&quot;Noto Sans&quot;,sans-serif,&quot;Helvetica Neue&quot;,Arial,&quot;Apple Color Emoji&quot;,&quot;Segoe UI Emoji&quot;,&quot;Segoe UI Symbol&quot;,&quot;Noto Color Emoji&quot;;"></span></span><span
+
+style="color: rgb(209, 213, 219); font-family: Söhne, ui-sans-serif, system-ui, -apple-system, &quot;Segoe UI&quot;, Roboto, Ubuntu, Cantarell, &quot;Noto Sans&quot;, sans-serif, &quot;Helvetica Neue&quot;, Arial, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;, &quot;Noto Color Emoji&quot;; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: pre-wrap; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(68, 70, 84); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"></span></li>
+                    <li><br>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -595,7 +599,7 @@ style="white-space: pre;"></span></div>
           </div>
           <div class="col-md-6 col-gap wow fadeInUp" data-wow-delay=".6s"> <img
 
-              src="xportal.png" style="width: 510px; height: 109px;"> </div>
+              src="images/art3.png" style="width: 510px; height: 395px;"> </div>
         </div>
       </div>
     </section>
@@ -768,7 +772,7 @@ style="white-space: pre;"></span></div>
               <div class="card">
                 <div class="card-header">
                   <h5> <a class="collapsed" data-toggle="collapse" data-target="#collapse-1-2">
-                      What is the max supply of Accel Token? </a> </h5>
+                      What is the max supply of Accel Token?</a></h5>
                 </div>
                 <div id="collapse-1-2" class="collapse" data-parent="#accordion-1">
                   <div class="card-body pt-0">
@@ -811,14 +815,11 @@ style="white-space: pre;"></span></div>
               <div class="card">
                 <div class="card-header">
                   <h5> <a class="collapsed" data-toggle="collapse" data-target="#collapse-2-1">
-                      How can i Contribute to the trade? </a> </h5>
+                      How can i Participate in private sale</a></h5>
                 </div>
                 <div id="collapse-2-1" class="collapse" data-parent="#accordion-2">
                   <div class="card-body pt-0">
-                    <p>Nunc placerat mi id nisi interdum mollis. Praesent
-                      pharetra, justo ut scelerisque mattis, leo quam aliquet
-                      diam, congue laoreet elit metus eget diam. Proin ac metus
-                      diam.</p>
+                    <p>Join Discord for more info.</p>
                   </div>
                 </div>
               </div>
@@ -866,8 +867,6 @@ style="white-space: pre;"></span></div>
               </div>
             </div>
           </div>
-          <div class="col-12 text-center mt-md-5 mt-3 sm-txt wow fadeInUp" data-wow-delay=".6s">
-            <a href="javascript:;" class="view-link">View all Questions</a> </div>
         </div>
       </div>
     </section>
@@ -986,8 +985,6 @@ placeholder="Massage" class="form-control" required="" data-error="Write your me
               <ul class="list-unstyled">
                 <li><a href="javascript:;">Whitepaper<br>
                   </a></li>
-                <li><a href="javascript:;">Lightpaper<br>
-                  </a></li>
                 <li><a href="javascript:;">Documentation<br>
                   </a></li>
                 <li><a href="javascript:;">medium<br>
@@ -1010,15 +1007,12 @@ placeholder="Massage" class="form-control" required="" data-error="Write your me
         <div class="container">
           <div class="row">
             <div class="col-md-6 mb-md-0 mb-3">
-              <div class="payment-cards wow fadeInUp" data-wow-delay=".45s"> <br>
-                &nbsp;&nbsp;&nbsp; </div>
+              <div class="payment-cards wow fadeInUp" data-wow-delay=".45s">
+                &nbsp;&nbsp;&nbsp; <span class="sm-txt pr-2"></span></div>
             </div>
             <div class="col-md-6 text-md-right wow fadeInUp" data-wow-delay=".5s">
-              <div class="float-md-right  mb-md-0 mb-3"> <span class="sm-txt pr-2">Language:</span>
-                <div class="btn-group "> <button type="button" class="btn-language dropdown-toggle"
-
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    English </button>
+              <div class="float-md-right  mb-md-0 mb-3">
+                <div class="btn-group ">
                   <div class="dropdown-menu dropdown-menu-right"> <button class="dropdown-item"
 
                       type="button">English</button> <button class="dropdown-item"
@@ -1030,16 +1024,13 @@ placeholder="Massage" class="form-control" required="" data-error="Write your me
               </div>
               <div class="social-links float-md-right"> <a href="https://twitter.com/AccelFinance"
 
-                  target="_top"><i class="fa fa-twitter"></i></a><a href="javascript:;"><i
+                  target="_top"><i class="fa fa-twitter"></i></a><a href="javascript:;">
+                </a><a href="https://medium.com/@financeaccel/accel-finance-the-future-of-venture-capital-on-multiversx-blockchain-8bb6eb0d54e6"
 
-                    <a="" href="javascript:;"><i class=""></i></i></a><i <a="" href="javascript:;">
-                  <a href="https://medium.com/@financeaccel/accel-finance-the-future-of-venture-capital-on-multiversx-blockchain-8bb6eb0d54e6"
+                  target="_top"><i class="fa fa-medium"></i></a> <a href="javascript:;"><i
 
-                    target="_top"><i class="fa fa-medium"></i></a> <a href="javascript:;"><i
-
-                      class="fa fa-discord"></i></a> <a href="javascript:;"><i
-
-                      class="fa fa-telegram"></i></a> </i></div>
+                    class="fa fa-youtube"></i></a> <a href="javascript:;"><i class="fa fa-telegram"></i></a>
+              </div>
               <i <a="" href="javascript:;"> </i></div>
             <i <a="" href="javascript:;"> </i></div>
           <i <a="" href="javascript:;"> </i></div>
