--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ style="white-space: pre;"></span></div>
               </div>
               <div class="team-list wow fadeInUp mb-4" data-wow-delay=".6s"> <img
 
-                  class="rounded mb-md-0 mb-3" src="images/kimsnow" alt="">
+                  class="rounded mb-md-0 mb-3" src="images/kimsnow.png" alt="">
                 <h6 class="mt-md-4 mb-0">Kimsnow#7108</h6>
                 <p class="sm-txt mb-3">Buisness Partner</p>
                 <div class="team-social mb-md-0 mb-3"> <a href="#"><i class="fa fa-facebook"></i></a>
