--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ style="white-space: pre;"></span></div>
               </div>
               <div class="team-list wow fadeInUp mb-4" data-wow-delay=".6s"> <img
 
-                  class="rounded mb-md-0 mb-3" src="images/babyxee.png" alt="">
+                  class="rounded mb-md-0 mb-3" src="images/xee.png" alt="">
                 <h6 class="mt-md-4 mb-0">Baby_xee#5261</h6>
                 <p class="sm-txt mb-3">Advertiser/Ambassador</p>
                 <div class="team-social mb-md-0 mb-3"> <a href="#"><i class="fa fa-facebook"></i></a>
@@ -555,7 +555,7 @@ style="white-space: pre;"></span></div>
               </div>
               <div class="team-list wow fadeInUp mb-4" data-wow-delay=".7s"> <img
 
-                  class="rounded mb-md-0 mb-3" src="images/omar.png" alt="">
+                  class="rounded mb-md-0 mb-3" src="images/omar1.png" alt="">
                 <h6 class="mt-md-4 mb-0">! - Jewelry.omar.#5170</h6>
                 <p class="sm-txt mb-3">Discord Moderator</p>
                 <div class="team-social mb-md-0 mb-3"> <a href="#"><i class="fa fa-facebook"></i></a>
