--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   </li>
                   <li class="nav-item"> <a class="nav-link js-scroll-trigger" href="#roadmap">Roadmap</a>
                   </li>
-                  <li class="nav-item"> <a class="nav-link js-scroll-trigger" href="https://2903325516-files.gitbook.io/%7E/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FVg2TsThIxH6XBZ1pC8qR%2Fuploads%2FT7f29yc5FlxBd7zCRbEB%2FAccel%20Whitepaper.pdf?alt=media&amp;token=f7ffe046-fcd5-43ea-ae53-2086c8666bdd"
+                  <li class="nav-item"> <a class="nav-link js-scroll-trigger" href="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FVg2TsThIxH6XBZ1pC8qR%2Fuploads%2FmRBa9Zgei719Tbv6jA5O%2FAccel-Finance%20(1).pdf?alt=media&token=b7004bb7-bdca-4111-888e-240791e28794"
 
                       target="_top">Whitepaper</a> </li>
                   <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle"
