--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     <link href="css/magnific-popup.css" rel="stylesheet">
     <!--custom css-->
     <link href="css/main.css" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EX2VZ14BGP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EX2VZ14BGP');
+</script>
   </head>
   <body class="dark-theme">
     <!--header start-->
