--- a/index.html
+++ b/index.html
@@ -571,6 +571,17 @@ style="white-space: pre;"></span></div>
                   <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i
 
                       class="fa fa-google-plus"></i></a> </div>
+                
+                 <div class="team-list wow fadeInUp mb-4" data-wow-delay=".7s"> <img
+
+                  class="rounded mb-md-0 mb-3" src="images/emnirex.png" alt="">
+                <h6 class="mt-md-4 mb-0">Emnirex#8060</h6>
+                <p class="sm-txt mb-3">Ambassador</p>
+                <div class="team-social mb-md-0 mb-3"> <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i
+
+                      class="fa fa-google-plus"></i></a> </div>
+                
               </div>
             </div>
           </div>
@@ -635,53 +646,40 @@ style="white-space: pre;"></span></div>
                 <div class="row">
                   <div class="col-md-12" data-dot="&lt;i class='bi bi-bond'&gt;&lt;/i&gt; ">
                     <div class="steps-content text-dark">
-                      <h3 class="mb-md-3">Request for Transaction</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Assumenda enim esseexplicabo, in incidunt itaque
-                        labore quae quaerat qui sequi suscipit.</p>
+                      <h3 class="mb-md-3">What is a private sale in token?</h3>
+                      <p>A private sale in token refers to the sale of tokens to a select group of investors before the public sale or initial coin offering (ICO) of the token. It's a way for token issuers to raise capital and secure early investment from select investors, while offering those investors the potential for discounted tokens and early access to a promising project.</p>
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-md-12" data-dot="&lt;i class='bi bi-server'&gt;&lt;/i&gt;">
                     <div class="steps-content text-dark">
-                      <h3 class="mb-md-3">The Request is broadcast to all nodes
-                        in the network</h3>
-                      <p> Assumenda enim esseexplicabo, in incidunt itaque
-                        labore quae quaerat qui sequi suscipit. Lorem ipsum
-                        dolor sit amet, consectetur adipisicing elit.</p>
+                      <h3 class="mb-md-3">How does a private sale in token work?</h3>
+                      <p>Private sales are typically conducted through agreements known as Simple Agreement for Future Tokens (SAFTs), which outline the terms of the investment, including the number of tokens the investor will receive and the price at which they will be purchased. Private sale investors are often required to undergo a vetting process to ensure they meet certain criteria, such as being accredited investors or having a certain net worth. Once the private sale is complete, the tokens are typically held by the investor until they are listed on an exchange or made available for trading.</p>
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-md-12" data-dot=" &lt;i class='bi bi-target-arrow'&gt;&lt;/i&gt; ">
                     <div class="steps-content text-dark">
-                      <h3 class="mb-md-3">All nodes jointly validates the
-                        transaction</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Assumenda enim esseexplicabo, in incidunt itaque
-                        labore quae quaerat qui sequi suscipit.</p>
+                      <h3 class="mb-md-3">What are the benefits of a private sale in token?</h3>
+                      <p>Private sale investors receive discounted tokens compared to the public sale price, and they also have the potential for early access to a promising project. Token issuers benefit from the ability to raise capital and secure early investment from select investors. Private sales also provide a way for token issuers to comply with securities laws and regulations by vetting investors and ensuring they meet certain criteria.</p>
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-md-12" data-dot="&lt;i class='bi bi-finger-print'&gt;&lt;/i&gt; ">
                     <div class="steps-content text-dark">
-                      <h3 class="mb-md-3">Transaction completed</h3>
-                      <p>Lipsum dolor sit amet, consectetur adipisicing elit.
-                        Assumenda enim esseexplicabo, in incidunt itaque labore
-                        quae quaerat qui sequi suscipit.</p>
+                      <h3 class="mb-md-3">How does a private sale in token differ from a public sale?</h3>
+                      <p>Private sales are only available to a select group of investors, while public sales are open to anyone who wants to participate. Private sales typically involve selling tokens at a discounted price compared to the public sale price, and investors are often required to undergo a vetting process. Public sales, on the other hand, are often more widely advertised and may involve a larger number of participants.</p>
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-md-12" data-dot="&lt;i class='bi bi-hand'&gt;&lt;/i&gt;">
                     <div class="steps-content text-dark">
-                      <h3 class="mb-md-3">Block is added permanently to existing
-                        blockchain</h3>
-                      <p>Dolor sit amet consectetur adipisicing elit. Assumenda
-                        enim esseexplicabo, in incidunt itaque labore quae
-                        quaerat qui sequi suscipit.</p>
+                      <h3 class="mb-md-3">What are the risks of participating in a private sale in token?</h3>
+                      <p>As with any investment, there are risks associated with participating in a private sale in token. Since private sales are conducted before the token is available to the general public, there may be limited information available about the project or platform on which the token is based. Additionally, private sale investors may be required to hold onto their tokens for a certain period of time, which means they may not be able to sell their tokens right away. Finally, since private sales are only available to a select group of investors, there may be limited liquidity for the tokens, which can make it difficult to sell them if desired. As with any investment, it's important to do your research and carefully consider the risks before participating in a private sale in token.</p>
                     </div>
                   </div>
                 </div>
