--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 </div>
                 <div class="col">
                   <div class="card wow fadeInUp" data-wow-delay=".35s">
-                    <div class="card-body py-md-4"><img src="fonts/ripple.svg" alt=""
+                    <div class="card-body py-md-4"><img src="fonts/tether.svg" alt=""
 
                         width="70"></div>
                   </div>
