--- a/index.html
+++ b/index.html
@@ -1098,12 +1098,11 @@ style="white-space: pre;"></span></div>
                       <div class="py-3">
                         <h3 class="mb-0">Contact Accel Finance</h3>
                         <h3 "siko@gmail.com"<="" h3=""> </h3>
-                      </div>
+                       </div>
                       <div class="py-3">
-                        <h3><a name="contactsus" id="contactsus"></a><a id="contact-us">bumelmo@nosomn.com||magnum@nosomn.com
-                            </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                          </h3> </div>
-                    </div>
+                        <h3><a id="contact-us">bumelmo@accel-finance.com</a></h3>
+                        <h3><a>magnum@accel-finance.com</a></h3>
+                      </div>
                   </div>
                 </div>
               </div>
