--- a/index.html
+++ b/index.html
@@ -1098,10 +1098,10 @@ style="white-space: pre;"></span></div>
                       <div class="py-3">
                         <h3 class="mb-0">Contact Accel Finance</h3>
                         <h3 "siko@gmail.com"<="" h3=""> </h3>
-                       </div>
+                      </div>
                       <div class="py-3">
-                        <h3><a id="contact-us">bumelmo@accel-finance.com</a></h3>
-                        <h3><a>magnum@accel-finance.com</a></h3>
+                        <h3><a id="contact-us" href="mailto:bumelmo@accel-finance.com">bumelmo@accel-finance.com</a></h3>
+                        <h3><a href="mailto:magnum@accel-finance.com">magnum@accel-finance.com</a></h3>
                       </div>
                   </div>
                 </div>
