--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@ style="white-space: pre;"></span></div>
         </div>
       </div>
     </section>
-    <!--faq section end-->
+   <!--faq section end-->
     <div id="contact">
       <!--section start-->
       <section class="section-gap telegram-section">
@@ -1067,9 +1067,16 @@ style="white-space: pre;"></span></div>
                 data-wow-delay=".2s"><img src="images/discord%20logo.png" style="width: 142px; height: 142px;"></a>
               <h3 class="mt-4  wow fadeInUp" data-wow-delay=".3s"><a href="https://discord.gg/accelfinance"
 
-                  class="text-primary" target="_top">Join us on Discord Now</a></h3>
+                  class="text-primary" target="_top">Join us on Discord<br>
+                </a></h3>
               <p class="text-dark wow fadeInUp" data-wow-delay=".5s">Official
                 Token Dicord Server</p>
+              <img src="images/icons8-telegram-app-240.png" alt="">
+              <h3 class="mt-4  wow fadeInUp" data-wow-delay=".3s"><a href="https://t.me/accelfinanceofficial"
+
+                  class="text-primary" target="_top">Join us on Telegram</a></h3>
+              <p>Official Token Telegram Group</p>
+              <p class="text-dark wow fadeInUp" data-wow-delay=".5s"></p>
             </div>
           </div>
         </div>
