--- a/index.html
+++ b/index.html
@@ -340,9 +340,9 @@
                   </ul>
                 </div>
                 <div class="col-md-6 wow fadeInUp" data-wow-delay=".4s">
-                  <h5 class="text-paste-color">Goverence NFTs</h5>
+                  <h5 class="text-paste-color">Goverance NFTs</h5>
                   <ul class="list-unstyled">
-                    <li>Purchase an NFT and participate in ACCEL&nbsp; Rulling
+                    <li>Purchase an NFT and participate in ACCEL&nbsp; Ruling
                       and Decision<span style="color: #d1d5db;"><span style="font-family: Söhne,ui-sans-serif,system-ui,-apple-system,&quot;Segoe UI&quot;,Roboto,Ubuntu,Cantarell,&quot;Noto Sans&quot;,sans-serif,&quot;Helvetica Neue&quot;,Arial,&quot;Apple Color Emoji&quot;,&quot;Segoe UI Emoji&quot;,&quot;Segoe UI Symbol&quot;,&quot;Noto Color Emoji&quot;;"></span></span><span
 
 style="color: rgb(209, 213, 219); font-family: Söhne, ui-sans-serif, system-ui, -apple-system, &quot;Segoe UI&quot;, Roboto, Ubuntu, Cantarell, &quot;Noto Sans&quot;, sans-serif, &quot;Helvetica Neue&quot;, Arial, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;, &quot;Noto Color Emoji&quot;; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: pre-wrap; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(68, 70, 84); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"></span></li>
