--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   </li>
                   <li class="nav-item"> <a class="nav-link js-scroll-trigger" href="#roadmap">Roadmap</a>
                   </li>
-                  <li class="nav-item"> <a class="nav-link js-scroll-trigger" href="https://2903325516-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FVg2TsThIxH6XBZ1pC8qR%2Fuploads%2FdsEtJjshL9XWBGWOUHEU%2FAccel_Finance_1.pdf?alt=media&token=f13d93ae-9359-45d4-a918-84b2b904900c"
+                  <li class="nav-item"> <a class="nav-link js-scroll-trigger" href="https://docs.accel-finance.com/basics/whitepaper"
 
                       target="_top">Whitepaper</a> </li>
                   <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle"
